--- a/itu.html
+++ b/itu.html
@@ -301,85 +301,85 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </li>
 
             <!-- Slide 2 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/2-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 3 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/3-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 4 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/4-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 5 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/5-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 6 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/6-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 7 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/7-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 8 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/8-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 9 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/9-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 10 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/10-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 11 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/11-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 12 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/12-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 13 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/13-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 14 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/14-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 15 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
               <img src="images/projects/15-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
@@ -399,7 +399,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-md-6">
               <strong class="section-subtitle">Projeto Itu</strong>
               <h2 class="section-title section-about-title">Conheça o Projeto Skan Hous Itu SHITU</h2>
-              <p>Em meio a uma natureza exuberante nasce o Projeto Skan Hous Itu (SH ITU). Em um terreno de 20.000 m2 com uma área construída de 350m2, vizinho ao Condomínio Terras de São José.</p>
+              <p>Em meio a uma natureza exuberante nasce o Projeto Skan Hous Itu (SH ITU). Em um terreno de 20.000 m2 com uma área construída de 350m2, vizinho ao Condomínio Terras de São José. Este projeto foi desenvolvido pelo Studio Elevare, escritório de arquitetura da arquiteta Alessandra Pretti.</p>
 
               <div class="experience-box">
                 <div class="experience-border"></div>
