--- a/itu.html
+++ b/itu.html
@@ -397,9 +397,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <strong class="section-subtitle">Projeto Itu</strong>
-              <h2 class="section-title section-about-title">Conheça o Projeto Skan Hous Itu SHITU</h2>
-              <p>Em meio a uma natureza exuberante nasce o Projeto Skan Hous Itu (SH ITU). Em um terreno de 20.000 m2 com uma área construída de 350m2, vizinho ao Condomínio Terras de São José. Este projeto foi desenvolvido pelo Studio Elevare, escritório de arquitetura da arquiteta Alessandra Pretti.</p>
+              <strong class="section-subtitle">SKAN HOUS</strong>
+              <h2 class="section-title section-about-title">Projeto Skan Hous Itu</h2>
+              <p>Em meio a uma natureza exuberante nasce o Projeto Skan Hous Itu (SKITU). Em um terreno de 20.000 m2 com uma área construída de 350m2, vizinho ao Condomínio Terras de São José. Este projeto foi desenvolvido pelo Studio Elevare, escritório de arquitetura da arquiteta Alessandra Pretti.</p>
 
               <div class="experience-box">
                 <div class="experience-border"></div>
