--- a/index.html
+++ b/index.html
@@ -297,8 +297,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="https://skanhous.com.br/itu" >Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                <a href="https://skanhous.com.br/itu" style="display: inline-flex; align-items: center; gap: 5px; text-decoration: none;">
+                Veja o Projeto 
+                <i class="icon ion-ios-arrow-thin-right" style="vertical-align: middle; font-size: 1em;"></i>
                 </a>
+
               </div>
             </li>
 
