--- a/itu.html
+++ b/itu.html
@@ -60,22 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <nav class="nav mobile-menu">
         <ul class="menu-list right-boxed">
           <li>
-            <a  href="#main">Home</a>
-          </li>
-          <li>
-            <a href="#about">Sobre</a>
-          </li>
-          <li>
-            <a href="#projects">Projetos</a>
-          </li>
-          <li>
-            <a href="#clients">Clientes</a>
-          </li>
-          <li>
-            <a href="#team">Missão</a>
-          </li>
-          <li>
-            <a href="#contacts">Contato</a>
+            <a  href="https://skanhous.com.br/">Home</a>
           </li>
         </ul>
       </nav>
