--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="https://skanhous.com.br/fpoles" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="https://skanhous.com.br/fpoles" class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
@@ -588,7 +588,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600; ">
-                  <a href="#project3" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="https://skanhous.com.br/v2" class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
