--- a/fpoles.html
+++ b/fpoles.html
@@ -60,22 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <nav class="nav mobile-menu">
         <ul class="menu-list right-boxed">
           <li>
-            <a  href="#main">Home</a>
-          </li>
-          <li>
-            <a href="#about">Sobre</a>
-          </li>
-          <li>
-            <a href="#projects">Projetos</a>
-          </li>
-          <li>
-            <a href="#clients">Clientes</a>
-          </li>
-          <li>
-            <a href="#team">Missão</a>
-          </li>
-          <li>
-            <a href="#contacts">Contato</a>
+            <a  href="https://skanhous.com.br/">Home</a>
           </li>
         </ul>
       </nav>
@@ -129,22 +114,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <nav class="nav navigation visible-lg">
         <ul>
           <li>
-            <a  href="#main">Home</a>
-          </li>
-          <li>
-            <a href="#about">Sobre</a>
-          </li>
-          <li>
-            <a href="#projects">Projetos</a>
-          </li>
-          <li>
-            <a href="#clients">Clientes</a>
-          </li>
-          <li>
-            <a href="#team">Missão</a>
-          </li>
-          <li>
-            <a href="#contacts">Contato</a>
+            <a  href="https://skanhous.com.br/">Home</a>
           </li>
         </ul>
       </nav>
@@ -343,15 +313,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <strong class="section-subtitle">Projeto Itu</strong>
-              <h2 class="section-title section-about-title">Conheça o Projeto Skan Hous Itu SHITU</h2>
-              <p>Em meio a uma natureza exuberante nasce o Projeto Skan Hous Itu (SH ITU). Em um terreno de 20.000 m2 com uma área construída de 350m2, vizinho ao Condomínio Terras de São José. Este projeto foi desenvolvido pelo Studio Elevare, escritório de arquitetura da arquiteta Alessandra Pretti.</p>
+              <strong class="section-subtitle">FPOLES</strong>
+              <h2 class="section-title section-about-title">Projeto FPoles Skan Hous</h2>
+              <p>Com um conceito único de modularidade o renomado escritório FPoles criou esta casa de alto padrão utilizando madeira engenheirada.</p>
 
               <div class="experience-box">
                 <div class="experience-border"></div>
                 <div class="experience-content">
                   <div class="experience-number">7</div>
-                  <div class="experience-info">Meses<br>Tempo de Entrega<br>Skan Hous Itu</div>
+                  <div class="experience-info">Metragem<br>De 400 a 1.200 m2<br>Madeira Engenheirada</div>
                 </div>
               </div>
             </div>
@@ -359,38 +329,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="dots-image">
                 <img alt="" class="about-img img-responsive" src="images/1.1-470x660.jpg">
                 <div class="dots"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section bg-dots">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <div class="section-info">
-                <div class="title-hr wow fadeInLeft"></div>
-                <div class="info-title">O que fazemos</div>
-              </div>
-            </div>
-            <div class="col-md-9">
-              <div class="row-services row">
-                <div class="col-service col-sm-6 col-lg-4 wow fadeInUp">
-                  <span class="text-dark icon icon-apartment"></span>
-                  <h4>Idealizamos</h4>
-                  <p>O primeiro passo é criar Projetos Modulares dentro dos pilares ESG (Environment, Social e Governance) aliado a projetos arquitônicos comtemporânos desenvolvidos em tecnologia BIM.</p>
-                </div>
-                <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-                  <span class="text-dark icon icon-pencil-ruler"></span>
-                  <h4>Planejamos</h4>
-                  <p>Uma vez pronto, planejamos a execução de cada unidade para melhor atender a situação de cada cliente sempre pensando em otimizar tempo e custo da obra.</p>
-                </div>
-                <div class="clearfix visible-sm visible-md"></div>
-                <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.8s">
-                  <span class="text-dark icon icon-truck"></span>
-                  <h4>Executamos</h4>
-                  <p>Com os nossos contrutorers parceiros realizamos o projeto do começo até a entrega das chaves.Tranquilidade, qualidade e previsibilidade na execução dos projetos Skan Hous.</p>
-                </div>
               </div>
             </div>
           </div>
@@ -446,115 +384,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </section>
 
-      <!-- Section Clients -->
-      <section id="clients" class="section-clients section bg-dots">
-        <div class="container">
-          <h2 class="section-title">Parceiros</h2>
-          <div class="client-carousel owl-carousel">
-            <div class="client-carousel-item">
-              <img alt="" class="client-img" src="images/clients/1-92x92.jpg">
-              <div class="client-box">
-                <img alt="" class="image-quote" src="images/image-icons/icon-quote.png">
-                <div class="client-title">
-                  <span class="client-name">Alessandra Pretti</span> 
-                  <span class="client-company">/ Studio Elevare</span>
-                </div>
-                <p class="client-description">Participar do desenvolvimento do projeto de casas modulares foi um marco na minha trajetória. Idealizamos um sistema construtivo adaptável a diferentes tipos de terrenos, promovendo integração com o meio ambiente e respeitando as características naturais de cada local. O foco em uma construção ecologicamente correta, com processos limpos e eficientes, garantiu um resultado que combina funcionalidade, beleza e sustentabilidade, atendendo às demandas de quem busca inovação e qualidade.</p>
-              </div>
-            </div>
-            <div class="client-carousel-item">
-              <img alt="" class="client-img" src="images/clients/2-92x92.jpg">
-              <div class="client-box">
-                <img alt="" class="image-quote" src="images/image-icons/icon-quote.png">
-                <div class="client-title">
-                  <span class="client-name">Andre Pinheiro </span> 
-                  <span class="client-company">/ Zanollin Engenharia</span>
-                </div>
-                <p class="client-description">Desenvolver o projeto de casas modulares foi um desafio que trouxe enorme satisfação para a equipe da ZANOLLIN. Adaptar a experiência acumulada ao longo dos anos na área industrial para um contexto mais sutil e integrado com todas as disciplinas foi uma jornada enriquecedora. O resultado final foi uma estrutura que harmoniza perfeitamente com a arquitetura: apesar da robustez típica de estruturas industriais, alcançamos linhas suaves e elegantes, criando uma integração arquitetônica marcante e funcional.</p>
-              </div>
-            </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-<div class="experience-box">
-  <div class="experience-border"></div>
-  <div class="experience-content">
-    <div class="experience-number">3</div>
-    <div class="experience-info">Valores<br>Visão<br>Missão</div>
-  </div>
-</div>
-
-<!-- Section Valores -->
-<section id="team" class="section section-about">
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="section-info">
-        <div class="title-hr wow fadeInLeft"></div>
-        <div class="info-title">Valores</div>
-      </div>
-    </div>
-    <div class="col-md-9">
-      <div class="row-services row">
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp">
-          <h4>Qualidade</h4>
-          <p>Nossas práticas e processos de projeto e construção são aprimorados para fornecer os resultados da mais alta qualidade para nossos clientes, uma casa durável, bem projetada e construída de maneira sistêmica.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-          <h4>Eternos Clientes</h4>
-          <p>Construímos mais do que casas, construímos confiança. Acreditamos que, quando entregamos as casas da mais alta qualidade, criamos um relacionamento para toda a vida.</p>
-        </div>
-        <div class="clearfix visible-sm visible-md"></div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.8s">
-          <h4>Regra de Ouro</h4>
-          <p>É um conceito simples mas poderoso: tratamos nossos clientes, fornecedores, parceiros e uns aos outros da maneira que queremos ser tratados - com empatia, respeito e integridade.</p>
-        </div>
-        <div class="clearfix visible-lg"></div> <!-- Clearfix adicionado para melhorar o alinhamento em telas maiores -->
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="1.2s">
-          <h4>Mãe Terra</h4>
-          <p>Sabemos que as construções têm um impacto profundo no meio ambiente e na saúde das pessoas. Como construtores de casas, sentimos a responsabilidade diária de construir e operar respeitando a mãe natureza da melhor maneira possível.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="1.6s">
-          <h4>Menos é Mais</h4>
-          <p>Uma casa construída em menos tempo, com uso de tecnologia e construção offsite, causa menor impacto ambiental além de aumentar a qualidade na entrega do imóvel.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="2.0s">
-          <h4>Segurança</h4>
-          <p>Somos intransigentes em nosso compromisso com a saúde e segurança dos nossos colaboradores, clientes e da comunidade em geral.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Section Missão e Visão -->
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="section-info">
-        <div class="title-hr wow fadeInLeft"></div>
-        <div class="info-title">Missão e Visão</div>
-      </div>
-    </div>
-    <div class="col-md-9">
-      <div class="row-services row">
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp">
-          <h4>Nossa Missão</h4>
-          <p>Transformar a experiência de morar e trabalhar dos brasileiros através da construção modular ágil, saudável e de alta qualidade em um processo altamente escalável, com alto impacto positivo nas áreas sociais e ambientais em todo Brasil.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-          <h4>Nossa Visão</h4>
-          <p>Desenvolver comunidades vibrantes integradas com a natureza, resultado de um balanço de sucesso entre integração sócio-econômica, sustentável e CO2 positiva.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
       <!-- Section Contacts -->
       <section id="contacts">
 
@@ -595,9 +424,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       </p>   
                       <div class="text-muted"><strong class="text-dark">Nos siga nas Redes Sociais</strong><br>
                         <div class="contact-social social-list">
-                          <a href="" class="icon ion-social-instagram"></a>
-                          <a href="" class="icon ion-social-linkedin"></a>
-                          <a href="" class="icon ion-social-link"></a>
+                        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+                        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+                        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
                         </div>
                       </div>
                     </div>
